app/assets/stylesheets/application.css.scss
// @import "bootstrap-sprockets";
// @import "bootstrap";

@import "bootstrap/normalize";

html, body{
  height: 100%;
}

body {
  overflow: hidden;
  font-family:Georgia, "Times New Roman", Times, serif;
  background-color: #000;
  background-image: url(asset_path('bg-main-black.png'));
}

#loader{
  width: 420px;
  height: 420px;
  margin: -210px 0 0 -210px;
  top: 45%;
  left: 50%;
  cursor: pointer;

  // -webkit-box-reflect: below 10px;
  // -webkit-box-reflect: below 1px -webkit-gradient(linear, 0 0, 0 100%, from(transparent), color-stop(.5, transparent), to(rgba(3,3,3,.8)));
  // background: -webkit-linear-gradient(top, rgba(174,188,191,1) 0%,rgba(110,119,116,1) 50%,rgba(10,14,10,1) 51%,rgba(10,8,9,1) 100%);
  // -webkit-background-clip: text;
  // -webkit-text-fill-color: transparent;

   -webkit-user-select: none;
   -khtml-user-select: none;
   -moz-user-select: none;
   -o-user-select: none;
   user-select: none;
}

.chronograph{
  position: relative;
  font-family: BebasNeueRegular;
  line-height: 30px;
  color: #999;

  canvas{ position: relative; z-index: 1; }
  h2, p{ margin: 0; padding: 0;}
  .text{
    width: 100%;
    position: absolute;
    text-align: center;
    z-index: 2;

    .percent{
      min-height: 50px;
      margin-top: 110px;
      font-size: 84px;
      line-height: 85px;
      color: #FFF;
    }

    .slogan{
      line-height: 42px;
      color: #FFF;
    }

    .intro{
      font-size: 18px;
      font-style: italic;
    }

    .size{
      min-height: 36px;
      font-size: 24px;
      line-height: 42px;
      text-transform: Uppercase;
    }

    .copy{
      line-height: 14px;
      color: #444;
      font-size: 12px;
    }
  }
}



#downloader{
  display: block;
  width:420px;
  height:420px;
  margin: -210px 0 0 -210px;
  position: fixed;
  top: 50%;
  left: 50%;
  text-decoration: none;
  cursor: pointer;
  // text-transform: Uppercase;

  // -webkit-box-reflect: below 1px -webkit-gradient(linear, 0 0, 0 100%, from(transparent), color-stop(.5, transparent), to(rgba(3,3,3,.8)));

  // background: -webkit-linear-gradient(top, rgba(174,188,191,1) 0%,rgba(110,119,116,1) 50%,rgba(10,14,10,1) 51%,rgba(10,8,9,1) 100%);
  // -webkit-background-clip: text;
  // -webkit-text-fill-color: transparent;

   // -webkit-user-select: none;
   // -khtml-user-select: none;
   // -moz-user-select: none;
   // -o-user-select: none;
   // user-select: none;
}

.counter {
  width: 420px;
  height: 420px;
  margin:0 auto;
  text-align: center;
  text-decoration: none;
  position: relative;

  canvas{
    position: absolute;
    top: 0;
    left: 0;
    z-index: 1;
  }

  p, span{
    color:#FFF;
    padding: 0;
    margin: 0;
  }

  .text, .timer{
    z-index: 2;
  }

  .text {
    width: 100%;
    padding: 0 20px;
    position: absolute;
    top: 200px;
    box-sizing: border-box;

    p {
      font-size:20px;
      line-height:30px;
    }

    span {
      color:#999;
      font-style:italic;
      line-height:30px;
      font-size:18px;
    }
  }

  .timer {
    width: 100%;
    padding: 0 20px;
    position: absolute;
    bottom: 130px;
    box-sizing: border-box;
    p {
      color:#616161;
      font-size:16px;
      text-align:center;
      font-style:italic;
    }
    span {
      color:#FFF;
    }
  }
}

